k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ceramic-discovery
  labels:
    name: ceramic-discovery
    environment: production
